--- a/static/index.html
+++ b/static/index.html
@@ -6,6 +6,7 @@
 		<title>Tech Interview</title>
 	</head>
 	<body>
-		Hello, world!
+		<div id="app"></div>
+		<script src="main.js"></script>
 	</body>
 </html>
